[build-system]
requires = [
    "setuptools >= 44",
    "wheel >= 0.30",
    "setuptools_scm[toml]>=3.4",
]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 80

[tool.setuptools_scm]
write_to = "src/attrs_strict/_version.py"
write_to_template = """
\"\"\" Version information \"\"\"

__version__ = "{version}"

# -----------------------------------------------------------------------------
# Copyright 2019 Bloomberg Finance L.P.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ----------------------------- END-OF-FILE -----------------------------------
"""
