[metadata]
name = attrs_strict
description = Runtime validators for attrs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bloomberg/attrs-strict
author = Erik-Cristian Seulean
author_email = eseulean@bloomberg.net
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
project_urls =
    Source=https://github.com/bloomberg/attrs-strict
    Tracker=https://github.com/bloomberg/attrs-strict/issues
    Documentation=https://github.com/bloomberg/attrs-strict/blob/main/README.md#attrs-runtime-validation

[options]
packages = attrs_strict
install_requires =
    attrs>=22.2
    typing-extensions>=4.4;python_version < "3.8"
python_requires = >=3.7
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
docs =
    Sphinx>=6.1.3
test =
    covdefaults>=2.2.2
    pytest>=7.2.1
    pytest-cov>=4

[options.package_data]
attrs_strict = py.typed

[coverage:run]
plugins = covdefaults
parallel = true

[coverage:paths]
src =
    src
    .tox/*/lib/python*/site-packages
    .tox/pypy*/site-packages
    .tox\*\Lib\site-packages\
    */src
    *\src
other =
    .
    */attrs-strict
    *\attrs-strict

[coverage:report]
fail_under = 98

[coverage:html]
show_contexts = true
skip_covered = false
